--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ body {
 #root > div {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   will-change: transform;
   display: flex;
   align-items: center;
