--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ body {
 #root {
   background: lightblue;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   cursor: url('https://cdn.custom-cursor.com/db/8583/32/minimal-panda-pointer.png') , pointer!important;
 }
 
@@ -45,6 +45,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background: lightblue;
 }
 
 #root > div > div {
